--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "5.9.2",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "prettier": "^2.5.1",
+    "reactotron-react-native": "^5.0.1",
     "typescript": "^4.5.5"
   },
   "private": true,
